<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!-- Search, should appear as action button -->


    <item
        android:icon="@drawable/email"
        android:title="@string/sms"
        yourapp:showAsAction="always"
        android:id="@+id/item_Mostrar_Emails"/>

    <item android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/email"
        yourapp:showAsAction="always"
        android:id="@+id/item_Mostrar_SMS" />

    <item android:title="@string/title_activity_lista_contactos"
        android:id="@+id/itemListaContactos"
        app:showAsAction="never" />

    <item android:title="@string/ver_perfil"
        android:visible="true"
        android:enabled="true"
        android:id="@+id/itemVerPerfil" />

    <item android:title="@string/preferencias"
        android:id="@+id/itemPreferencias" />
    <item android:title="@string/acerca_de"
        android:id="@+id/itemAcercaDe" />
</menu>