<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.islasf.samaelmario.vista.EnvioEmailActivity"
    tools:showIn="@layout/activity_envio_email">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_Remitente"
        android:hint="@string/remitente"
        android:layout_marginEnd="23dp"
        android:layout_alignBaseline="@+id/tv_De"
        android:layout_alignBottom="@+id/tv_De"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_Asunto"
        android:layout_alignBaseline="@+id/tv_Asunto"
        android:layout_alignBottom="@+id/tv_Asunto"
        android:layout_alignStart="@+id/et_Destinatarios" />

    <EditText
        android:layout_width="wrap_content"
        android:ems="10"
        android:id="@+id/et_TextoEmail"
        android:background="@color/verde_muy_claro"
        android:hint="@string/pista_mensaje_Email"
        android:maxLength="160"
        android:layout_marginBottom="62dp"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:enabled="true" />

    <TextView
        android:text="@string/seleccionarContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_ContactoSuperior"
        android:textStyle="normal|italic"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_De"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/et_Remitente"
        android:layout_alignBottom="@+id/et_Remitente"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_Asunto"
        android:layout_above="@+id/et_TextoEmail"
        android:layout_toEndOf="@+id/tv_Asunto"
        android:layout_marginBottom="11dp" />

    <TextView
        android:text="@string/para"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_Para"
        android:textSize="24sp"
        android:layout_centerVertical="true" />
        android:id="@+id/tv_Asunto"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/et_Asunto"
        android:layout_alignBottom="@+id/et_Asunto"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_Destinatarios"
        android:hint="@string/destinatario"
        android:layout_above="@+id/et_Asunto"
        android:layout_alignStart="@+id/et_Asunto" />

    <TextView
        android:text="@string/para"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_Para"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/et_Destinatarios"
        android:layout_alignBottom="@+id/et_Destinatarios"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_Remitente"
        android:hint="@string/remitente"
        android:layout_above="@+id/et_Destinatarios"
        android:layout_alignStart="@+id/et_Destinatarios" />

    <TextView
        android:text="@string/aseunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:id="@+id/tv_InformacionContactos"
        android:text="@string/informacionContactos"
        android:layout_above="@+id/et_Remitente"
        android:layout_alignParentStart="true" />

</RelativeLayout>
