<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_envio_sms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.islasf.samaelmario.vista.EnvioSMSActivity"
    tools:showIn="@layout/activity_envio_sms">

    <EditText
        android:layout_width="wrap_content"
        android:ems="10"
        android:id="@+id/etMensaje"
        android:background="@color/verde_muy_claro"
        android:hint="@string/pista_mensaje_SMS"
        android:maxLength="160"
        android:layout_height="170dp"
        android:layout_marginBottom="81dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:elevation="0dp"
        android:enabled="true" />

    <TextView
        android:text="@string/seleccionar_contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_seleccionarContacto"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/contacto_seleccionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtContacto"
        android:textSize="14sp"
        android:layout_marginBottom="80dp"
        android:textStyle="normal|italic"
        android:layout_above="@+id/etMensaje"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_marginBottom="16dp"
        android:id="@+id/et_DestinatarioSMS"
        android:layout_above="@+id/etMensaje"
        android:layout_alignParentStart="true" />
</RelativeLayout>
