<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_envio_sms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EnvioSMSActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:text="@string/seleccionar_contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/textView5"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabCancelar"
        android:layout_width="66dp"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:backgroundTint="@color/rojo_oscuro"
        android:layout_gravity="bottom|start"
        tools:srcCompat="@android:drawable/presence_offline"
        android:onClick="onCancelar"
        android:layout_height="66dp"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="34dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabContactos"
        app:srcCompat="@android:drawable/ic_menu_my_calendar"
        app:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="onSeleccionar_contacto"
        android:layout_width="66dp"
        android:layout_height="66dp"
        tools:srcCompat="@android:drawable/ic_menu_my_calendar"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabEnviar"
        android:layout_gravity="bottom|end"
        app:srcCompat="@android:drawable/ic_menu_send"
        app:backgroundTint="@android:color/holo_green_light"
        android:onClick="onEnviar"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_alignTop="@+id/fabCancelar"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="17dp"
        android:layout_width="66dp"
        android:layout_height="66dp" />

    <EditText
        android:layout_width="wrap_content"
        android:ems="10"
        android:id="@+id/etMensaje"
        android:background="@color/verde_muy_claro"
        android:hint="@string/pista_mensaje_SMS"
        android:maxLength="160"
        android:layout_height="170dp"
        android:enabled="false"
        android:layout_above="@+id/fabEnviar"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="26dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/contacto_seleccionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:visibility="invisible"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/etMensaje"
        android:layout_alignParentStart="true" />

</RelativeLayout>
